tests/cases/compiler/restArgMissingName/index.ts
// From `github.com/microsoft/TypeScript/blob/v5.7.3/tests/cases/compiler/restArgMissingName.ts`, Apache-2.0 License

function sum (...) {} 
//~^ ERROR: Identifier expected.